# zindi-nmt

./: .gitignore  init_script  pyproject.toml
data/: all_dyu.txt  all_fr.txt  base_dyu.txt  base_fr.txt  dyu_val_V1.txt  dyu_val_V1.txt-filtered.dyu  fra_val_V1.txt  fra_val_V1.txt-filtered.fra
evals/: eval_ALL_V0.txt  eval_ALL_V5_2000.txt  eval_ALL_V6_6000.txt  eval_ALL_V6_7000.txt  eval_BASE_V0.txt  test2  test3
models/: config.yaml  config2.yaml  dictionary2.txt  dictionary3.txt  nllb-inference.yaml  source.model  source.vocab  target.model  target.vocab
models/ct-optim/: shared_vocabulary.json
notebooks/: convert_model.ipynb  nmt_eval.ipynb  train.ipynb
train/: train.ipynb
