[tool.poetry]
name = "nmt-train"
version = "0.1.0"
description = ""
authors = ["Rana Banerjee"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.09"
sentencepiece = "^0.2.0"
ctranslate2 = "^4.3.1"
numpy = "<2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
